--- a/LayoutsCodelab/app/build.gradle
+++ b/LayoutsCodelab/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
     testImplementation 'junit:junit:4.+'
+    implementation "androidx.compose.material:material-icons-extended:$compose_version" // material-icons-extended
+    implementation "io.coil-kt:coil-compose:1.3.0" // coil-compose
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
