--- a/LayoutsCodelab/app/build.gradle
+++ b/LayoutsCodelab/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha07" // constraintlayout-compose
     implementation 'androidx.activity:activity-compose:1.4.0'
     testImplementation 'junit:junit:4.+'
     implementation "androidx.compose.material:material-icons-extended:$compose_version" // material-icons-extended
